--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/pmNiko/useQueryMunisma.git"
+    "url": "https://github.com/pmNiko/usequerymunisma"
   },
   "license": "MIT",
   "main": "dist/index.js",
